; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/lpr/common_source/extr_rmjob.c_isowner.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/lpr/common_source/extr_rmjob.c_isowner.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@person = common dso_local global i64 0, align 8
@root = common dso_local global i8* null, align 8
@from_host = common dso_local global i64 0, align 8
@local_host = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [5 x i8] c"%s: \00", align 1
@.str.1 = private unnamed_addr constant [23 x i8] c"%s: Permission denied\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*, i8*)* @isowner to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @isowner(i8* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  %8 = load i64, i64* @person, align 8
  %9 = load i8*, i8** @root, align 8
  %10 = call i32 @strcmp(i64 %8, i8* %9)
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %22, label %12

12:                                               ; preds = %3
  %13 = load i64, i64* @from_host, align 8
  %14 = load i64, i64* @local_host, align 8
  %15 = icmp eq i64 %13, %14
  br i1 %15, label %21, label %16

16:                                               ; preds = %12
  %17 = load i64, i64* @from_host, align 8
  %18 = load i8*, i8** %7, align 8
  %19 = call i32 @strcmp(i64 %17, i8* %18)
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %22, label %21

21:                                               ; preds = %16, %12
  store i32 1, i32* %4, align 4
  br label %44

22:                                               ; preds = %16, %3
  %23 = load i64, i64* @person, align 8
  %24 = load i8*, i8** %5, align 8
  %25 = call i32 @strcmp(i64 %23, i8* %24)
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %33, label %27

27:                                               ; preds = %22
  %28 = load i64, i64* @from_host, align 8
  %29 = load i8*, i8** %7, align 8
  %30 = call i32 @strcmp(i64 %28, i8* %29)
  %31 = icmp ne i32 %30, 0
  br i1 %31, label %33, label %32

32:                                               ; preds = %27
  store i32 1, i32* %4, align 4
  br label %44

33:                                               ; preds = %27, %22
  %34 = load i64, i64* @from_host, align 8
  %35 = load i64, i64* @local_host, align 8
  %36 = icmp ne i64 %34, %35
  br i1 %36, label %37, label %41

37:                                               ; preds = %33
  %38 = load i64, i64* @local_host, align 8
  %39 = inttoptr i64 %38 to i8*
  %40 = call i32 @printf(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i8* %39)
  br label %41

41:                                               ; preds = %37, %33
  %42 = load i8*, i8** %6, align 8
  %43 = call i32 @printf(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.1, i64 0, i64 0), i8* %42)
  store i32 0, i32* %4, align 4
  br label %44

44:                                               ; preds = %41, %32, %21
  %45 = load i32, i32* %4, align 4
  ret i32 %45
}

declare dso_local i32 @strcmp(i64, i8*) #1

declare dso_local i32 @printf(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
